--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -4,6 +4,54 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+
+<script type="text/javascript">
+
+var map;
+
+function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 0, lng: 0},
+      zoom: 7,
+      mapTypeId: 'terrain'
+    });
+}
+
+function do_the_plotting(track_id) {
+
+    /*
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: 51.13344993777271, lng: 2.303557851685234},
+      zoom: 7,
+      mapTypeId: 'terrain'
+    });
+    */
+
+    $.get('http://127.0.0.1:5000/find_track/' + track_id, function(data) {
+        alert('ae');
+        console.log(data);
+    });
+
+    var flightPlanCoordinates = [
+        {lat: 37.772, lng: -122.214, strokeColor: '#0000FF'},
+        {lat: 21.291, lng: -157.821},
+        {lat: -18.142, lng: 178.431},
+        {lat: -27.467, lng: 153.027}
+    ];
+
+    var flightPath = new google.maps.Polyline({
+        path: flightPlanCoordinates,
+        geodesic: true,
+        strokeColor: '#FF0000',
+        strokeOpacity: 1.0,
+        strokeWeight: 2
+    });
+
+    flightPath.setMap(map);
+}
+
+</script>
+
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -32,8 +80,6 @@
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="code.js"></script>
 
   </body>
 </html>
