--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -5,164 +5,9 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
 
-<script type="text/javascript">
-
-// codigo que gera as cores
-var percentColors = [
-    { pct: 0.0, color: { r: 0xff, g: 0x00, b: 0 } },
-    { pct: 0.5, color: { r: 0xff, g: 0xff, b: 0 } },
-    { pct: 1.0, color: { r: 0x00, g: 0xff, b: 0 } } ];
-
-var getColorForPercentage = function(pct) {
-    for (var i = 1; i < percentColors.length - 1; i++) {
-        if (pct < percentColors[i].pct) {
-            break;
-        }
-    }
-    var lower = percentColors[i - 1];
-    var upper = percentColors[i];
-    var range = upper.pct - lower.pct;
-    var rangePct = (pct - lower.pct) / range;
-    var pctLower = 1 - rangePct;
-    var pctUpper = rangePct;
-    var color = {
-        r: Math.floor(lower.color.r * pctLower + upper.color.r * pctUpper),
-        g: Math.floor(lower.color.g * pctLower + upper.color.g * pctUpper),
-        b: Math.floor(lower.color.b * pctLower + upper.color.b * pctUpper)
-    };
-    return 'rgb(' + [color.r, color.g, color.b].join(',') + ')';
-    // or output as hex if preferred
-}
-//
-
-
-
-
-var map;
-
-function initMap() {
-    var track_id = location.pathname.split("/map/")[1];
-
-    var flightPlanCoordinates;
-
-    console.log('aaa');
-    $.get('http://127.0.0.1:5000/find_track/' + track_id, function(data) {
-        resp = JSON.parse(data);
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: resp['center'],
-          zoom: 12,
-          mapTypeId: 'terrain',
-          styles: [
-            {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
-            {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
-            {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
-            {
-              featureType: 'administrative.locality',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#d59563'}]
-            },
-            {
-              featureType: 'poi',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#d59563'}]
-            },
-            {
-              featureType: 'poi.park',
-              elementType: 'geometry',
-              stylers: [{color: '#263c3f'}]
-            },
-            {
-              featureType: 'poi.park',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#6b9a76'}]
-            },
-            {
-              featureType: 'road',
-              elementType: 'geometry',
-              stylers: [{color: '#38414e'}]
-            },
-            {
-              featureType: 'road',
-              elementType: 'geometry.stroke',
-              stylers: [{color: '#212a37'}]
-            },
-            {
-              featureType: 'road',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#9ca5b3'}]
-            },
-            {
-              featureType: 'road.highway',
-              elementType: 'geometry',
-              stylers: [{color: '#746855'}]
-            },
-            {
-              featureType: 'road.highway',
-              elementType: 'geometry.stroke',
-              stylers: [{color: '#1f2835'}]
-            },
-            {
-              featureType: 'road.highway',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#f3d19c'}]
-            },
-            {
-              featureType: 'transit',
-              elementType: 'geometry',
-              stylers: [{color: '#2f3948'}]
-            },
-            {
-              featureType: 'transit.station',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#d59563'}]
-            },
-            {
-              featureType: 'water',
-              elementType: 'geometry',
-              stylers: [{color: '#17263c'}]
-            },
-            {
-              featureType: 'water',
-              elementType: 'labels.text.fill',
-              stylers: [{color: '#515c6d'}]
-            },
-            {
-              featureType: 'water',
-              elementType: 'labels.text.stroke',
-              stylers: [{color: '#17263c'}]
-            }
-          ]
-        });
-
-        coordinates = resp['coordinates'];
-        phenomenons = resp['phenomenons'];
-        vel_maxima = resp['vel-max'];
-
-        for (i = 0 ; i < coordinates.length-1; i++) {
-          a = coordinates[i];
-          b = coordinates[i+1];
-          //kol = 'blue';
-          //console.log(phenomenons[i]);
-
-          var vel = phenomenons[i]['Speed']['value'];
-          kol = getColorForPercentage(1-vel/vel_maxima);
-
-          var flightPath_1 = new google.maps.Polyline({
-            path: [a, b],
-            geodesic: true,
-            strokeColor: kol,
-            strokeOpacity: 1.0,
-            strokeWeight: 4
-          });
-
-          flightPath_1.setMap(map);
-        }
-
-
-    });
-}
-
-</script>
+    <script src="http://127.0.0.1:5000/get_file/gera_cores.js"></script>
+    <script src="http://127.0.0.1:5000/get_file/map_styles.js"></script>
+    <script src="http://127.0.0.1:5000/get_file/principal_js.js"></script>
 
     <style>
       /* Always set the map height explicitly to define the size of the div
