--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
 
+    <script src="http://127.0.0.1:5000/get_file/create_dashboard_string.js"></script>
     <script src="http://127.0.0.1:5000/get_file/gera_cores.js"></script>
     <script src="http://127.0.0.1:5000/get_file/map_styles.js"></script>
     <script src="http://127.0.0.1:5000/get_file/principal_js.js"></script>
