starting speed limit + html style changed
- probably I will not use these speed limit services, because
  google maps does not offer this service in the free plan.
  I will, maybe, use open maps or something else.
- html styles changed: black menu

--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -26,16 +26,17 @@
       }
       #fixed-left {
          position:absolute;
+         background-color: #222222;
          right:0px;
          top  :0px;
-         background-color: white;
          width: 20%;
          height:100%
       }
 
       .main-dashboard {
-        background-color: white;
+        background-color: #222222;
         font-size: 13px;
+        color: #ffcc00;
         padding: 5px;
       }
     </style>
