--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -15,7 +15,7 @@
        * element that contains the map. */
       #map {
         height: 100%;
-        width: 80%;
+        width: 50%;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -26,19 +26,26 @@
       }
       #fixed-left {
          position:absolute;
-         background-color: #222222;
+         background-color: #e3e3e3;
          right:0px;
          top  :0px;
-         width: 20%;
+         width: 50%;
          height:100%
       }
 
       .main-dashboard {
-        background-color: #222222;
+        background-color: white;
         font-size: 13px;
         color: #ffcc00;
         padding: 5px;
       }
+
+      .axis path {
+          fill: none;
+          stroke: #777;
+          shape-rendering: crispEdges;
+      }
+
     </style>
   </head>
   <body>
@@ -49,6 +56,7 @@
         <tr>
           <td>
             <div class="main-dashboard">
+              <svg id="visualisation" width="100%" height="500"></svg>
             </div>
           </td>
           <td></td>
@@ -57,6 +65,7 @@
     </div>
 
     <script src="http://127.0.0.1:5000/get_file/jquery.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDehTfquJd2bxKy3kHRbZ-Ml23aP4YZfd8&callback=initMap" async defer></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDehTfquJd2bxKy3kHRbZ-Ml23aP4YZfd8&libraries=drawing"></script>
 
