--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -26,7 +26,7 @@
       }
       #fixed-left {
          position:absolute;
-         background-color: #e3e3e3;
+         background-color: whites;
          right:0px;
          top  :0px;
          width: 50%;
@@ -44,6 +44,16 @@
           fill: none;
           stroke: #777;
           shape-rendering: crispEdges;
+      }
+
+      .axis--x path {
+        display: none;
+      }
+
+      .line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 1.5px;
       }
 
     </style>
