--- a/web_application/teste.html
+++ b/web_application/teste.html
@@ -8,6 +8,8 @@
     <script src="http://127.0.0.1:5000/get_file/create_dashboard_string.js"></script>
     <script src="http://127.0.0.1:5000/get_file/gera_cores.js"></script>
     <script src="http://127.0.0.1:5000/get_file/map_styles.js"></script>
+    <script src="http://127.0.0.1:5000/get_file/speed.js"></script>
+    <script src="http://127.0.0.1:5000/get_file/other_graphic.js"></script>
     <script src="http://127.0.0.1:5000/get_file/principal_js.js"></script>
 
     <style>
@@ -66,7 +68,8 @@
         <tr>
           <td>
             <div class="main-dashboard">
-              <svg id="visualisation" width="100%" height="500"></svg>
+              <svg id="visualisation" width="100%" height="200"></svg>
+              <svg id="visualisation2" width="100%" height="500"></svg>
             </div>
           </td>
           <td></td>
